# boroll

./: .bconf  BoAppLoop.cpp  Bofiguration.cpp  Boroll.cpp  CMakeLists.txt  CurlWrap.cpp  Makefile  README  ShiftingFrame.cpp  XMLPostFetch.cpp  config
include/: BoAppLoop.hpp  Bofiguration.hpp  CurlWrap.hpp  GTKCallbacks.hpp  ShiftingFrame.hpp  XMLPostFetch.hpp
res/: gtklayout.glade
syntaxTools/: keyv.y  keyvscanner.l
